[gd_scene load_steps=3 format=3 uid="uid://dsfrhs00gxwdc"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bxhi0mry26lje" path="res://3D_env.tscn" id="2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 600)
layout_mode = 2
mouse_default_cursor_shape = 13
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(300, 648)
render_target_update_mode = 4

[node name="3D_env" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("2")]

[node name="InputPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/InputPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/InputPanel"]
layout_mode = 2

[node name="ParseButton" type="Button" parent="HBoxContainer/InputPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Parse"

[node name="RenderButton" type="Button" parent="HBoxContainer/InputPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Render"

[node name="TestButton" type="Button" parent="HBoxContainer/InputPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test"

[node name="Sidebar" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="HBoxContainer/Sidebar"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="EditCheckTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="mouse_entered" from="HBoxContainer/SubViewportContainer" to="HBoxContainer/SubViewportContainer/SubViewport/3D_env" method="_on_ViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/SubViewportContainer" to="HBoxContainer/SubViewportContainer/SubViewport/3D_env" method="_on_ViewportContainer_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/InputPanel/HBoxContainer/ParseButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/InputPanel/HBoxContainer/RenderButton" to="." method="_on_RenderButton_pressed"]
[connection signal="pressed" from="HBoxContainer/InputPanel/HBoxContainer/TestButton" to="." method="_on_TestButton_pressed"]
